Construcao dos yamls para orquestrador de container